fix product shipping spacing - fix trimmed product taxonomy description

--- a/sass/shop/_cart.scss
+++ b/sass/shop/_cart.scss
@@ -97,6 +97,10 @@ body.woocommerce-cart {
                     }
                 }
 
+                .woocommerce-shipping-destination {
+                    margin: 5px 0;
+                }
+
                 .shipping-calculator-form {
                     p {
                         padding-right: 0;
